--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/16/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">56.9&#176;F</td>
+        <td class="data">56.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">56.9&#176;F</td>
+        <td class="data">56.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">56.9&#176;F</td>
+        <td class="data">56.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">38.5&#176;F</td>
+        <td class="data">38.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">50%</td>
+        <td class="data">51%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.030 inHg (0.033)</td>
+        <td class="data">30.027 inHg (0.030)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:44:51 AM</td>
+          <td class="data">06:45:36 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:11:45 PM</td>
+          <td class="data">07:10:17 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:48:51 PM">
-            90.7</span><br/>
-          <span title="07:07:35 AM">
-            49.7</span>
+          <span title="12:00:04 AM">
+            56.8</span><br/>
+          <span title="12:03:00 AM">
+            56.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:48:51 PM" class="hival">
-            90.7</span>
+          <span title="12:00:04 AM" class="hival">
+            56.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="07:07:35 AM" class="loval">
-            49.7</span>
+          <span title="12:03:00 AM" class="loval">
+            56.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:29:11 AM (Sunday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:39:49 PM">
-            50.5</span><br/>
-          <span title="08:12:40 PM">
-            30.0</span>
+          <span title="12:02:26 AM">
+            38.8</span><br/>
+          <span title="12:01:28 AM">
+            38.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:43:47 AM">
-            79</span><br/>
-          <span title="04:06:40 PM">
-            13</span>
+          <span title="12:02:26 AM">
+            51</span><br/>
+          <span title="12:00:04 AM">
+            50</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="10:03:01 AM">
-            30.054</span><br/>
-          <span title="06:07:02 PM">
-            29.954</span>
+          <span title="12:00:04 AM">
+            30.027</span><br/>
+          <span title="12:04:00 AM">
+            30.025</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -351,7 +351,7 @@
       <tr>
         <td class="label">Rain Rate</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
+          <span title="12:00:04 AM">
             0.00</span>
         </td>
         <td class="data new_row hilo_week">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="03:55:08 PM">
-            19</span><br/>
-          209
+          <span title="12:00:24 AM">
+            2</span><br/>
+          331
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          2</td>
+          1</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          4</td>
+          1</td>
         <td class="data new_row hilo_week">
           4</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          2<br/>
-          199
+          1<br/>
+          332
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:32:02 PM">
-            82.0</span><br/>
-          <span title="07:48:01 AM">
-            73.3</span>
+          <span title="12:00:04 AM">
+            76.5</span><br/>
+          <span title="12:01:00 AM">
+            76.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:32:02 PM (Tuesday)">
@@ -505,10 +505,10 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="11:46:01 AM">
-            38</span><br/>
-          <span title="06:21:02 PM">
-            27</span>
+          <span title="12:00:04 AM">
+            32</span><br/>
+          <span title="12:00:04 AM">
+            32</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 9 hours, 12 minutes</td>
+      <td class="data">14 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 9 hours, 12 minutes</td>
+      <td class="data">14 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
