--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/16/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">90.7<br/>
-            <span class="timestamp">01:48:51 PM</span><br/>
-            49.7<br/>
-            <span class="timestamp">07:07:35 AM</span>
+          <td class="data new_row">56.8<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            56.6<br/>
+            <span class="timestamp">12:03:00 AM</span>
           </td>
           <td class="data new_row">92.9<br/>
             <span class="timestamp">01:23:25 PM (Monday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">90.7<br/>
-            <span class="timestamp">01:48:51 PM</span>
+          <td class="data new_row">56.8<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">92.9<br/>
             <span class="timestamp">01:23:25 PM (Monday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">49.7<br/>
-            <span class="timestamp">07:07:35 AM</span>
+          <td class="data new_row">56.6<br/>
+            <span class="timestamp">12:03:00 AM</span>
           </td>
           <td class="data new_row">48.7<br/>
             <span class="timestamp">07:29:11 AM (Sunday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">50.5<br/>
-            <span class="timestamp">12:39:49 PM</span><br/>
-            30.0<br/>
-            <span class="timestamp">08:12:40 PM</span>
+          <td class="data new_row">38.8<br/>
+            <span class="timestamp">12:02:26 AM</span><br/>
+            38.3<br/>
+            <span class="timestamp">12:01:28 AM</span>
           </td>
           <td class="data new_row">52.9<br/>
             <span class="timestamp">11:14:17 AM (Monday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">79<br/>
-            <span class="timestamp">06:43:47 AM</span><br/>
-            13<br/>
-            <span class="timestamp">04:06:40 PM</span>
+          <td class="data new_row">51<br/>
+            <span class="timestamp">12:02:26 AM</span><br/>
+            50<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">95<br/>
             <span class="timestamp">07:40:53 AM (Monday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">30.054<br/>
-            <span class="timestamp">10:03:01 AM</span><br/>
-            29.954<br/>
-            <span class="timestamp">06:07:02 PM</span>
+          <td class="data new_row">30.027<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            30.025<br/>
+            <span class="timestamp">12:04:00 AM</span>
           </td>
           <td class="data new_row">30.054<br/>
             <span class="timestamp">10:03:01 AM (Tuesday)</span><br/>
@@ -249,7 +249,7 @@
           <td class="units"> in/h</td>
           <td class="data new_row">
             0.00<br/>
-            <span class="timestamp">12:00:01 AM</span>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">
             0.00<br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            19<br/>
-            209<br/>
-            <span class="timestamp">03:55:08 PM</span>
+            2<br/>
+            331<br/>
+            <span class="timestamp">12:00:24 AM</span>
           </td>
           <td class="data new_row">
             23<br/>
@@ -304,7 +304,7 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            2</td>
+            1</td>
           <td class="data new_row">
             2</td>
           <td class="data new_row">
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">4</td>
+          <td class="data new_row">1</td>
           <td class="data new_row">4</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            2<br/>
-            199
+            1<br/>
+            332
           </td>
           <td class="data new_row">
             2<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            82.0<br/>
-            <span class="timestamp">06:32:02 PM</span><br/>
-            73.3<br/>
-            <span class="timestamp">07:48:01 AM</span>
+            76.5<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            76.4<br/>
+            <span class="timestamp">12:01:00 AM</span>
           </td>
           <td class="data new_row">
             82.0<br/>
@@ -396,10 +396,10 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            38<br/>
-            <span class="timestamp">11:46:01 AM</span><br/>
-            27<br/>
-            <span class="timestamp">06:21:02 PM</span>
+            32<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            32<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">
             41<br/>
