--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 12:14:00 AM</p>
+    <p class="lastupdate">09/16/2020 12:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">56.4&#176;F</td>
+        <td class="data">56.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">56.4&#176;F</td>
+        <td class="data">56.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">56.4&#176;F</td>
+        <td class="data">56.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">38.5&#176;F</td>
+        <td class="data">38.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.025 inHg (0.023)</td>
+        <td class="data">30.026 inHg (0.022)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph WNW (292&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.4&#176;F</td>
+        <td class="data">76.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             56.8</span><br/>
-          <span title="12:08:38 AM">
-            56.3</span>
+          <span title="12:18:42 AM">
+            56.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:08:38 AM" class="loval">
-            56.3</span>
+          <span title="12:18:42 AM" class="loval">
+            56.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:29:11 AM (Sunday)" class="loval">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:26 AM">
-            38.8</span><br/>
+          <span title="12:14:24 AM">
+            39.0</span><br/>
           <span title="12:01:28 AM">
             38.3</span>
         </td>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:26 AM">
-            51</span><br/>
+          <span title="12:14:24 AM">
+            52</span><br/>
           <span title="12:00:04 AM">
             50</span>
         </td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             30.027</span><br/>
-          <span title="12:04:00 AM">
-            30.025</span>
+          <span title="12:17:00 AM">
+            30.022</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          1</td>
+          0</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -439,7 +439,7 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          1<br/>
+          0<br/>
           310
         </td>
         <td class="data new_row hilo_week">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 9 hours, 27 minutes</td>
+      <td class="data">14 days, 9 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 9 hours, 27 minutes</td>
+      <td class="data">14 days, 9 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
